--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,7 +7,8 @@
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "noEmit": true
+    "noEmit": true,
+    "lib": ["ES2021"]
   },
   "include": ["vite.config.ts"]
 }
