--- a/.example.env
+++ b/.example.env
@@ -5,3 +5,4 @@ VITE_FIREBASE_STORAGE_BUCKET=
 VITE_FIREBASE_MESSAGING_SENDER_ID=
 VITE_FIREBASE_APP_ID=
 # CAN BE FOUND AT https://console.firebase.google.com/u/0/project/just-recipes-9e656/settings/general/web
+VITE_GOOGLE_CLIENT_ID=
