fixed build errors

--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@types/uuid": "^10.0.0",
     "firebase": "^10.12.5",
     "framer-motion": "^11.3.29",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0",
-    "uuid": "^10.0.0"
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
