--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "files": [],
+  "files": ["./test.setup.ts"], 
   "references": [
     {
       "path": "./tsconfig.app.json"
@@ -8,6 +8,7 @@
       "path": "./tsconfig.node.json"
     }
   ],
+  "types": ["vitest/globals"],
   "compilerOptions": {
     "lib": ["ES2021"],
     "baseUrl": ".",
